--- a/backEnd/shop4all/src/main/resources/application.properties
+++ b/backEnd/shop4all/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=shop4all
+
+server.port=9090
+
+############# Database Properties ###########################################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/shop4all_db?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=${PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+##(create, update, create-drop, validate)
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+server.servlet.context-path=/api/v1
